--- a/web/public/index.html
+++ b/web/public/index.html
@@ -63,7 +63,7 @@
             if (code.length == 4) {
                 document.getElementById('msg').textContent = 'Accepté !';
                 setTimeout(() => {
-                    window.location.href = '/acceuil';
+                    window.location.href = '/web/public/acceuil.html';
                 }, 1000);
             } else {
                 document.getElementById('msg').textContent = 'Entrez 4 chiffres';
